# django-task-manager

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  conftest.py  coverage.xml  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  schema.yml
.github/workflows/: ci.yml
accounts/: urls.py
api/: serializers.py  urls.py  views.py
api/tests/: test_auth.py  test_permissions.py  test_tasks.py
apps/accounts/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
apps/tasks/: admin.py  apps.py  models.py  tests.py  urls.py
apps/tasks/migrations/: 0001_initial.py
docs/: _config.yml  index.html
src/apps/accounts/: apps.py
src/task_manager/: asgi.py  settings.py  settings.py.bak  urls.py  wsgi.py
static/css/: style.css
task_manager/: settings.py  urls.py
tasks/: apps.py  forms.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_forms.py  test_models.py
templates/: base.html
templates/accounts/: login.html  register.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
tests/: test_100_coverage.py  test_admin_actions.py  test_admin_coverage.py  test_admin_final.py  test_final_coverage.py  test_forms_coverage.py  test_forms_coverage_final.py  test_forms_final.py  test_forms_final_coverage.py  test_forms_line69.py  test_forms_line94.py  test_forms_line94_final.py  test_forms_line94_simple.py  test_forms_line94_ultimate.py  test_forms_missing.py  test_models_coverage.py  test_models_final.py  test_remaining_coverage.py  test_views_coverage.py  test_views_final.py  test_views_last_line.py  test_views_line219.py  test_views_priority_search.py  test_views_search_missing.py  test_views_today_line.py
