[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager"
version = "3.14.7"
description = "A professional Django task manager with user authentication and category management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.1",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.10",
    "pytest-cov>=6.0",
    "black>=25.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.2",
]

# ============================================================================
# Package Discovery Configuration
# ============================================================================
# Instructs setuptools to find the 'apps' package in the project root.
# This is critical for pip install -e . to work correctly in CI environments.
# ============================================================================
[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

# ============================================================================
# Code Formatting - Black
# ============================================================================
# Enforces consistent code style across the project.
# Line length of 88 is the Black default for better readability.
# ============================================================================
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

# ============================================================================
# Linting - Ruff
# ============================================================================
# Fast Python linter that replaces Flake8, isort, and more.
# Selected rules cover errors, warnings, imports, naming, and best practices.
# E501 (line too long) is ignored since Black handles formatting.
# B008 (do not perform function calls in argument defaults) is ignored.
# ============================================================================
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501", "B008"]

# ============================================================================
# Type Checking - MyPy
# ============================================================================
# Static type checking for Python code.
# django_settings_module points to the Django settings for plugin integration.
# ============================================================================
[tool.mypy]
python_version = "3.10"
django_settings_module = "task_manager.settings"
plugins = ["mypy_django_plugin.plugin"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ============================================================================
# Testing - Pytest Configuration
# ============================================================================
# Critical for CI: pythonpath ensures the 'apps' module is discoverable.
# DJANGO_SETTINGS_MODULE tells pytest-django where to find Django settings.
# testpaths limits test discovery to the 'apps' directory for speed.
# addopts enables verbose output, coverage tracking, and XML report for Codecov.
# ============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "-v --cov=apps --cov-report=term --cov-report=xml"
testpaths = ["apps"]
pythonpath = [".", "src"]  # Adds both project root and src/ to sys.path
