[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager"
version = "3.14.7"
description = "A professional Django task manager with user authentication and category management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.1",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=0.4",
    "django-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.10",
    "pytest-cov>=6.0",
    "black>=25.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["accounts*", "tasks*", "task_manager*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "RET",
]
ignore = [
    "E501",
    "B008",
]

[tool.mypy]
python_version = "3.10"
django_settings_module = "task_manager.settings"
plugins = ["mypy_django_plugin.plugin"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "-v --cov=accounts --cov=tasks --cov=task_manager --cov-report=term --cov-report=html --cov-report=xml --cov-config=.coveragerc"
testpaths = ["accounts", "tasks", "tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 88
